<resources>
    <string name="app_name">ProjetCV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>









    <string name="name">Abdelkafi Alaeddien</string>
    <string name="mail">alaeddin.abdelkafi@iit.ens.tn</string>
    <string name="tel">+21644106323</string>
    <string name="date">20/02/1997</string>
    <string name="localisation">Tunisia,Sfax</string>

    <string name="menu_parcours">Parcours Académique</string>
    <string name="menu_aboutme" >A propos</string>
    <string name="menu_Stages">Stages</string>
    <string name="menu_event">événements</string>
    <string name="menu_formation">Formation</string>
    <string name="menu_certification">Certification</string>
    <string name="menu_compétences">Compétences</string>
    <string name="menu_langues">Langues</string>
    <string name="menu_club">Club et responsabilité</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
</resources>
